--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
   - docker
+env:
+    global:
+      - SHA=$(git rev-parse HEAD)
+      - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   # Decrypt the encrypted gcloud credentials from travis ci
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
@@ -10,5 +14,22 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc
   # Install kubectl
   - gcloud components update kubectl
-  # Authenticate user in gcloud (note: service-account is similar to AWS IAM)
+  # Login to gcloud (note: service-account is similar to AWS IAM)
   - gcloud auth activate-service-account --key-file service-account.json
+  # Set gcloud working project
+  - gcloud config set project multi-k8s-300201
+  # Set gcloud location zone
+  - gcloud config set compute/zone asia-southeast1-a
+  # Set gcloud cluster
+  - gcloud container clusters get-credentials multi-cluster
+  # Login to docker
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  # Build client dev image
+  - docker build -t yilong9407/react-test -f ./client/Dockerfile.dev
+script:
+  - docker run -e CI=true yilong9407/react-test npm test
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
