--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   # Login to docker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   # Build client dev image
-  - docker build -t yilong9407/react-test -f ./client/Dockerfile.dev
+  - docker build -t yilong9407/react-test -f ./client/Dockerfile.dev ./client
 script:
   - docker run -e CI=true yilong9407/react-test npm test
 deploy:
